NetBSD Problem Report #42146

From tsutsui@ceres.dti.ne.jp  Fri Oct  2 13:12:02 2009
Return-Path: <tsutsui@ceres.dti.ne.jp>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 2C3CD63B8B6
	for <gnats-bugs@gnats.NetBSD.org>; Fri,  2 Oct 2009 13:12:02 +0000 (UTC)
Message-Id: <200910021311.n92DBxPs005534@mirage.ceres.dti.ne.jp>
Date: Fri, 2 Oct 2009 22:11:59 +0900 (JST)
From: tsutsui@ceres.dti.ne.jp
Reply-To: tsutsui@ceres.dti.ne.jp
To: gnats-bugs@gnats.NetBSD.org
Cc: tsutsui@ceres.dti.ne.jp
Subject: sparc install floppy overflow
X-Send-Pr-Version: 3.95

>Number:         42146
>Category:       install
>Synopsis:       sparc install floppy overflow
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    install-manager
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Oct 02 13:15:00 +0000 2009
>Closed-Date:    Sat Jan 23 23:39:35 +0000 2010
>Last-Modified:  Sat Jan 23 23:39:35 +0000 2010
>Originator:     Izumi Tsutsui
>Release:        NetBSD 5.0.1
>Organization:
>Environment:
NetBSD 5.0.1 release binary distribution
>Description:
sparc/installation/floppy/disk2 binary (which is a symlink to
sparc/installation/bootfs/instfs.tgz) doesn't fit 1440KB floppy.

>How-To-Repeat:

% ftp ftp://ftp.NetBSD.org/pub/NetBSD/NetBSD-5.0.1/sparc/installation/floppy/disk2
 :
150 Opening BINARY mode data connection for 'disk2' (1528772 bytes).
100% |***********************************|  1492 KiB  102.04 KiB/s    00:00 ETA
 :
# dd if=disk2 of=/dev/rfd0a bs=36k
dd: /dev/rfd0a: end of device
41+0 records in
40+0 records out
1474560 bytes transferred in 48.477 secs (30417 bytes/sec)

>Fix:
- prepare own list file of a crunchide binary for instfs and
  remove unnecesarry binaries to shrink it
  (instfs.tgz is created from a file list for miniroot;
   see src/distrib/sparc/instfs/Makefile)
or
- switch to using ustarfs based boot floppies with RAMDISK kernel
  (I don't know reason why sparc doesn't use it)

etc?
---
Izumi Tsutsui

>Release-Note:

>Audit-Trail:
From: matthew green <mrg@eterna.com.au>
To: gnats-bugs@NetBSD.org
Cc: install-manager@netbsd.org, gnats-admin@netbsd.org,
    netbsd-bugs@netbsd.org
Subject: re: install/42146: sparc install floppy overflow
Date: Sat, 03 Oct 2009 03:51:15 +1000

    - switch to using ustarfs based boot floppies with RAMDISK kernel
      (I don't know reason why sparc doesn't use it)


 ustarfs is newer than sparc floppy install support.


 i think this is the best idea.

From: Izumi Tsutsui <tsutsui@ceres.dti.ne.jp>
To: gnats-bugs@NetBSD.org
Cc: install-manager@NetBSD.org, gnats-admin@NetBSD.org, netbsd-bugs@NetBSD.org,
        mrg@eterna.com.au, tsutsui@ceres.dti.ne.jp
Subject: Re: install/42146: sparc install floppy overflow
Date: Fri, 16 Oct 2009 00:52:36 +0900

 mrg@eterna.com.au wrote:

 >     - switch to using ustarfs based boot floppies with RAMDISK kernel
 >       (I don't know reason why sparc doesn't use it)
 >  
 >  
 >  ustarfs is newer than sparc floppy install support.
 >  
 >  
 >  i think this is the best idea.

 It may require more confirmation, but there are may other bugs
 around floppy boot ;-(

 The simple workaround for overflow is building miniroot with -Os
 because instfs uses miniroot objects. Is it acceptable for 5.1?

 ---
 Index: sparc/miniroot/Makefile.inc
 ===================================================================
 RCS file: /cvsroot/src/distrib/sparc/miniroot/Makefile.inc,v
 retrieving revision 1.12
 diff -u -r1.12 Makefile.inc
 --- sparc/miniroot/Makefile.inc	13 Jun 2004 05:27:18 -0000	1.12
 +++ sparc/miniroot/Makefile.inc	15 Oct 2009 15:44:52 -0000
 @@ -1,6 +1,7 @@
  #	$NetBSD: Makefile.inc,v 1.12 2004/06/13 05:27:18 sjg Exp $

  IMAGESIZE=	8192k
 +DBG=		-Os
  MAKEFS_FLAGS=   -o density=4k
  IMAGEENDIAN=	be
  MAKEDEVTARGETS=	all
 ---
 % ls -l instfs.tgz 
 -r--r--r--  1 tsutsui  wheel  1450904 Oct 15 00:32 instfs.tgz

 (on netbsd-5 branch)

 ---

 BTW, we should also update install notes to pull MI sysinst description.

 ---
 Izumi Tsutsui

From: matthew green <mrg@eterna.com.au>
To: Izumi Tsutsui <tsutsui@ceres.dti.ne.jp>
Cc: install-manager@NetBSD.org, gnats-admin@NetBSD.org,
    netbsd-bugs@NetBSD.org, gnats-bugs@NetBSD.org
Subject: re: install/42146: sparc install floppy overflow
Date: Sat, 17 Oct 2009 03:56:06 +1100


    It may require more confirmation, but there are may other bugs
    around floppy boot ;-(

    The simple workaround for overflow is building miniroot with -Os
    because instfs uses miniroot objects. Is it acceptable for 5.1?


 works for me.  thanks!


 .mrg.

From: Izumi Tsutsui <tsutsui@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/42146 CVS commit: src/distrib/sparc/miniroot
Date: Sat, 17 Oct 2009 12:45:21 +0000

 Module Name:	src
 Committed By:	tsutsui
 Date:		Sat Oct 17 12:45:20 UTC 2009

 Modified Files:
 	src/distrib/sparc/miniroot: Makefile.inc

 Log Message:
 Build miniroot binaries for sparc with -Os to shrink instfs.tgz
 for the second boot floppy which use miniroot objects.

 This is workaround for PR install/42146, and ok'ed by mrg@.


 To generate a diff of this commit:
 cvs rdiff -u -r1.15 -r1.16 src/distrib/sparc/miniroot/Makefile.inc

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->pending-pullups
State-Changed-By: tsutsui@NetBSD.org
State-Changed-When: Wed, 16 Dec 2009 00:57:44 +0900
State-Changed-Why:
Should be pulled up to both netbsd-5 and netbsd-5-0, but once after
PRs port-sparc/42192 and port-sparc/42193 are also fixed.


From: Manuel Bouyer <bouyer@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/42146 CVS commit: [netbsd-5] src
Date: Sat, 23 Jan 2010 17:47:37 +0000

 Module Name:	src
 Committed By:	bouyer
 Date:		Sat Jan 23 17:47:37 UTC 2010

 Modified Files:
 	src/distrib/sparc/miniroot [netbsd-5]: Makefile.inc
 	src/distrib/sparc/ramdisk [netbsd-5]: dot.profile
 	src/sys/arch/sparc/dev [netbsd-5]: audioamd.c fd.c
 	src/sys/arch/sparc/sparc [netbsd-5]: auxreg.h
 	src/sys/arch/sparc/stand/common [netbsd-5]: promdev.c

 Log Message:
 Pull up following revision(s) (requested by tsutsui in ticket #1251):
 	sys/arch/sparc/sparc/auxreg.h: revision 1.13
 	distrib/sparc/ramdisk/dot.profile: revision 1.20
 	sys/arch/sparc/dev/audioamd.c: revision 1.25
 	sys/arch/sparc/dev/fd.c: revision 1.147
 	sys/arch/sparc/stand/common/promdev.c: revision 1.23
 	distrib/sparc/miniroot/Makefile.inc: revision 1.16
 Build miniroot binaries for sparc with -Os to shrink instfs.tgz
 for the second boot floppy which use miniroot objects.
 This is workaround for PR install/42146, and ok'ed by mrg@.
 Don't try to read disklabel to check FS_RAID on floppy boot since
 reopening floppy could cause Data Access Exception later.
 Fixes PR port-sparc/42186, ok'ed by mrg@.
 Disable "fast trap" handlers which invoke software interrupts
 in sparc/amd7930intr.s and sparc/bsd_fdintr.s until they are
 rewritten to adapt new MI softint(9) API.
 No particular comments on PR port-sparc/42192, but
 this fixes timeout problem on floppy access on my SPARCstation 1+.
 XXX: floppy support on sun4m seems to have another problem (data overrun).
 Use /dev/fd0a rather than /dev/rfd0a to read instfs.tgz image from floppy.
 It looks newer (appearred after 1.6) gzip tries to read less than DEV_BSIZE
 (to check header?) so we can't use raw device directly.
 (note sparc bootfs ramdisk doesn't have dd(1))
 Workaround for PR port-sparc/42193, and would also fix PR install/28734.
 Explicitly clear AUXIO4M_FTC bit in FTC_FLIP macro used on
 pseudo-dma for floppy, as well as AUXIO4C_FTC bit for sun4c.
 A comment in the macro says AUXIO4M_FTC bit is auto-clear,
 but my two SS20s (including compatible) with 150MHz hyperSPARCs
 get data_overrun without it, and no bad side effect on SS5
 (works with and without this change).
 Closes PR port-sparc/42516, which is the last one of a bunch of
 floppy issue on NetBSD/sparc since NetBSD 2.0 days. See
 http://mail-index.NetBSD.org/port-sparc/2009/12/20/msg000484.html
 for details.


 To generate a diff of this commit:
 cvs rdiff -u -r1.12 -r1.12.34.1 src/distrib/sparc/miniroot/Makefile.inc
 cvs rdiff -u -r1.19 -r1.19.4.1 src/distrib/sparc/ramdisk/dot.profile
 cvs rdiff -u -r1.23 -r1.23.28.1 src/sys/arch/sparc/dev/audioamd.c
 cvs rdiff -u -r1.141 -r1.141.6.1 src/sys/arch/sparc/dev/fd.c
 cvs rdiff -u -r1.12 -r1.12.88.1 src/sys/arch/sparc/sparc/auxreg.h
 cvs rdiff -u -r1.21 -r1.21.14.1 src/sys/arch/sparc/stand/common/promdev.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: pending-pullups->closed
State-Changed-By: tsutsui@NetBSD.org
State-Changed-When: Sun, 24 Jan 2010 08:39:35 +0900
State-Changed-Why:
Pulled up to netbsd-5.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.