Pull up following revision(s) (requested by tsutsui in ticket #1251): 	sys/arch/sparc/sparc/auxreg.h: revision 1.13 	distrib/sparc/ramdisk/dot.profile: revision 1.20 	sys/arch/sparc/dev/audioamd.c: revision 1.25 	sys/arch/sparc/dev/fd.c: revision 1.147 	sys/arch/sparc/stand/common/promdev.c: revision 1.23 	distrib/sparc/miniroot/Makefile.inc: revision 1.16 Build miniroot binaries for sparc with -Os to shrink instfs.tgz for the second boot floppy which use miniroot objects. This is workaround for PR install/42146, and ok'ed by mrg@. Don't try to read disklabel to check FS_RAID on floppy boot since reopening floppy could cause Data Access Exception later. Fixes PR port-sparc/42186, ok'ed by mrg@. Disable "fast trap" handlers which invoke software interrupts in sparc/amd7930intr.s and sparc/bsd_fdintr.s until they are rewritten to adapt new MI softint(9) API. No particular comments on PR port-sparc/42192, but this fixes timeout problem on floppy access on my SPARCstation 1+. XXX: floppy support on sun4m seems to have another problem (data overrun). Use /dev/fd0a rather than /dev/rfd0a to read instfs.tgz image from floppy. It looks newer (appearred after 1.6) gzip tries to read less than DEV_BSIZE (to check header?) so we can't use raw device directly. (note sparc bootfs ramdisk doesn't have dd(1)) Workaround for PR port-sparc/42193, and would also fix PR install/28734. Explicitly clear AUXIO4M_FTC bit in FTC_FLIP macro used on pseudo-dma for floppy, as well as AUXIO4C_FTC bit for sun4c. A comment in the macro says AUXIO4M_FTC bit is auto-clear, but my two SS20s (including compatible) with 150MHz hyperSPARCs get data_overrun without it, and no bad side effect on SS5 (works with and without this change). Closes PR port-sparc/42516, which is the last one of a bunch of floppy issue on NetBSD/sparc since NetBSD 2.0 days. See http://mail-index.NetBSD.org/port-sparc/2009/12/20/msg000484.html for details.