distrib/sparc/ramdisk/dot.profile
@@ -1,4 +1,4 @@
-# $NetBSD: dot.profile,v 1.19 2008/04/30 13:10:49 martin Exp $
+# $NetBSD: dot.profile,v 1.19.4.1 2010/01/23 17:47:36 bouyer Exp $
 #
 # Copyright (c) 2000 The NetBSD Foundation, Inc.
 # All rights reserved.
@@ -76,7 +76,7 @@ floppy()
 	local dev rval
 
 	rval=0
-	dev="/dev/rfd0a"
+	dev="/dev/fd0a"
 
 	echo "Ejecting floppy disk"
 	eject $dev
